--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,3 +1,104 @@
 * {
   font-family: 'Inter', sans-serif;
+  color: #3c4455 !important;
+}
+
+*::selection {
+  background: rgba(61, 115, 255, 0.2);
+}
+
+body {
+  background-color: #edeef0;
+}
+
+.btn-primary-kun {
+  color: #fff !important;
+  background-color: #3d73ff !important;
+  border-color: #3d73ff !important;
+}
+
+.btn-primary-kun:hover {
+  background-color: #2c67fc !important;
+  border-color: #2c67fc !important;
+}
+
+.btn-transparent-kun {
+  background-color: transparent !important;
+  border-color: transparent !important;
+}
+
+.btn-transparent-kun:hover {
+  background-color: rgba(61, 115, 255, 0.2) !important;
+}
+
+.text-success-kun {
+  color: #53ec59 !important;
+}
+
+.text-gradient-kun {
+  background: #3d73ff !important;
+  background-image: linear-gradient(
+    45deg,
+    #3d73ff 5%,
+    #ff0032 52%,
+    #0c0c0f 95%
+  ) !important;
+  -webkit-background-clip: text !important;
+  -webkit-text-fill-color: transparent !important;
+}
+
+img.like-kun-move {
+  -webkit-animation: mover 1.5s infinite alternate;
+  animation: mover 1.5s infinite alternate;
+}
+img.like-kun-move {
+  -webkit-animation: mover 1.5s infinite alternate;
+  animation: mover 1.5s infinite alternate;
+}
+
+@-webkit-keyframes mover {
+  0% {
+    transform: translateY(0);
+  }
+  100% {
+    transform: translateY(-30px);
+  }
+}
+@keyframes mover {
+  0% {
+    transform: translateY(0);
+  }
+  100% {
+    transform: translateY(-30px);
+  }
+}
+
+img.heart-kun-move {
+  -webkit-animation: mover 1.5s infinite alternate;
+  animation: mover 1.5s infinite alternate;
+}
+img.heart-kun-move {
+  -webkit-animation: movers 1.5s infinite alternate;
+  animation: movers 1.5s infinite alternate;
+}
+
+@-webkit-keyframes movers {
+  0% {
+    transform: translateY(0);
+  }
+  100% {
+    transform: translateY(30px);
+  }
+}
+@keyframes movers {
+  0% {
+    transform: translateY(0);
+  }
+  100% {
+    transform: translateY(30px);
+  }
+}
+
+.bg-transparent-kun {
+  background: hsla(0, 0%, 100%, 0.89);
 }
