Fix minor on nav and layouting

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -36,6 +36,10 @@ body {
   color: #53ec59 !important;
 }
 
+.text-1of3-majors-kun {
+  color: #ffe0e0 !important;
+}
+
 .text-gradient-kun {
   background: #3d73ff !important;
   background-image: linear-gradient(
