Minor on Kuntoro text

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -46,7 +46,7 @@ body {
     45deg,
     #3d73ff 5%,
     #ff0032 52%,
-    #0c0c0f 95%
+    #ffe0e0 95%
   ) !important;
   -webkit-background-clip: text !important;
   -webkit-text-fill-color: transparent !important;
