--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,117 +1,120 @@
 * {
-  font-family: 'Inter', sans-serif;
-  color: #3c4455 !important;
+    font-family: 'Inter', sans-serif;
+    color: #3c4455 !important;
 }
 
 *::selection {
-  color: #2c67fc;
-  background: rgba(61, 115, 255, 0.2);
+    color: #2c67fc;
+    background: rgba(61, 115, 255, 0.2);
 }
 
 body {
-  background-color: #edeef0;
+    background-color: #edeef0;
 }
 
 .btn-primary-kun {
-  color: #fff !important;
-  background-color: #3d73ff !important;
-  border-color: #3d73ff !important;
+    color: #fff !important;
+    background-color: #3d73ff !important;
+    border-color: #3d73ff !important;
 }
 
 .btn-primary-kun:hover {
-  background-color: #2c67fc !important;
-  border-color: #2c67fc !important;
+    background-color: #2c67fc !important;
+    border-color: #2c67fc !important;
 }
 
 .btn-transparent-kun {
-  background-color: transparent !important;
-  border-color: transparent !important;
+    background-color: transparent !important;
+    border-color: transparent !important;
 }
 
 .btn-transparent-kun:hover {
-  background-color: rgba(61, 115, 255, 0.2) !important;
+    background-color: rgba(61, 115, 255, 0.2) !important;
 }
 
 .text-primary-kun {
-  color: #3d73ff !important;
+    color: #3d73ff !important;
 }
 
 .text-success-kun {
-  color: #53ec59 !important;
+    color: #53ec59 !important;
 }
 
 .text-1of3-majors-kun {
-  color: #ffe0e0 !important;
+    color: #ffe0e0 !important;
 }
 
 .text-gradient-kun {
-  background: #3d73ff !important;
-  background-image: linear-gradient(
-    45deg,
-    #3d73ff 5%,
-    #ff0032 52%,
-    #ffe0e0 95%
-  ) !important;
-  -webkit-background-clip: text !important;
-  -webkit-text-fill-color: transparent !important;
+    background: #3d73ff !important;
+    background-image: linear-gradient( 45deg, #3d73ff 5%, #ff0032 52%, #ffe0e0 95%) !important;
+    -webkit-background-clip: text !important;
+    -webkit-text-fill-color: transparent !important;
 }
 
 img.like-kun-move {
-  -webkit-animation: mover 1.5s infinite alternate;
-  animation: mover 1.5s infinite alternate;
+    -webkit-animation: mover 1.5s infinite alternate;
+    animation: mover 1.5s infinite alternate;
 }
+
 img.like-kun-move {
-  -webkit-animation: mover 1.5s infinite alternate;
-  animation: mover 1.5s infinite alternate;
+    -webkit-animation: mover 1.5s infinite alternate;
+    animation: mover 1.5s infinite alternate;
 }
 
 @-webkit-keyframes mover {
-  0% {
-    transform: translateY(0);
-  }
-  100% {
-    transform: translateY(-30px);
-  }
+    0% {
+        transform: translateY(0);
+    }
+    100% {
+        transform: translateY(-30px);
+    }
 }
+
 @keyframes mover {
-  0% {
-    transform: translateY(0);
-  }
-  100% {
-    transform: translateY(-30px);
-  }
+    0% {
+        transform: translateY(0);
+    }
+    100% {
+        transform: translateY(-30px);
+    }
 }
 
 img.heart-kun-move {
-  -webkit-animation: mover 1.5s infinite alternate;
-  animation: mover 1.5s infinite alternate;
+    -webkit-animation: mover 1.5s infinite alternate;
+    animation: mover 1.5s infinite alternate;
 }
+
 img.heart-kun-move {
-  -webkit-animation: movers 1.5s infinite alternate;
-  animation: movers 1.5s infinite alternate;
+    -webkit-animation: movers 1.5s infinite alternate;
+    animation: movers 1.5s infinite alternate;
 }
 
 @-webkit-keyframes movers {
-  0% {
-    transform: translateY(0);
-  }
-  100% {
-    transform: translateY(30px);
-  }
+    0% {
+        transform: translateY(0);
+    }
+    100% {
+        transform: translateY(30px);
+    }
 }
+
 @keyframes movers {
-  0% {
-    transform: translateY(0);
-  }
-  100% {
-    transform: translateY(30px);
-  }
+    0% {
+        transform: translateY(0);
+    }
+    100% {
+        transform: translateY(30px);
+    }
 }
 
 .bg-transparent-kun {
-  background: hsla(0, 0%, 100%, 0.89);
+    background: hsla(0, 0%, 100%, 0.89);
 }
 
 .bg-primary-kun {
-  background-color: #3d73ff !important;
+    background-color: #3d73ff !important;
+}
+
+.bg-secondary-kun {
+    background-color: #f7f7ff !important;
 }
